--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>I can push to github</h1>
     <h2>Ammu i can code now</h2>
     <h3>new code changed</h3>
+    <p>im coding more</p>
+    <p>im a learner</p>
 </body>
 </html>
